# vedabase-mcp

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  test_manual.py  vedabasemcpspec.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
tests/: test_db.py  test_fetcher.py  test_fuzzy.py
vedabase_mcp/: __init__.py  __main__.py  db.py  fetcher.py  fuzzy.py  server.py
