[project]
name = "vedabase-mcp"
version = "0.1.0"
description = "MCP server for Bhagavad Gita verse lookup, search, and fuzzy matching"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.2.0",
    "httpx>=0.25.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
]

[project.scripts]
vedabase-mcp = "vedabase_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
